Fixed an issue with MuiPaper heights being too tall

--- a/src/css_modules/display.module.css
+++ b/src/css_modules/display.module.css
@@ -62,7 +62,7 @@
         width:55% !important;
         height: fit-content !important;
 
-        max-height: 750px !important;
+        max-height: 95% !important;
 
         margin-left: 20% !important;
         margin-right: 20% !important;
